sdk/networkcloud/arm-networkcloud/samples/v1/typescript/README.md
# client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for in some common scenarios.

| **File Name**                                                                                                       | **Description**                                                                                                                                                                                                                                                                                                                                                                                           |
| ------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [agentPoolsCreateOrUpdateSample.ts][agentpoolscreateorupdatesample]                                                 | Create a new Kubernetes cluster agent pool or update the properties of the existing one. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Create.json                                                                                                                                                                         |
| [agentPoolsDeleteSample.ts][agentpoolsdeletesample]                                                                 | Delete the provided Kubernetes cluster agent pool. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Delete.json                                                                                                                                                                                                               |
| [agentPoolsGetSample.ts][agentpoolsgetsample]                                                                       | Get properties of the provided Kubernetes cluster agent pool. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Get.json                                                                                                                                                                                                       |
| [agentPoolsListByKubernetesClusterSample.ts][agentpoolslistbykubernetesclustersample]                               | Get a list of agent pools for the provided Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_ListByKubernetesCluster.json                                                                                                                                                                                  |
| [agentPoolsUpdateSample.ts][agentpoolsupdatesample]                                                                 | Patch the properties of the provided Kubernetes cluster agent pool, or update the tags associated with the Kubernetes cluster agent pool. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/AgentPools_Patch.json                                                                   |
| [bareMetalMachineKeySetsCreateOrUpdateSample.ts][baremetalmachinekeysetscreateorupdatesample]                       | Create a new bare metal machine key set or update the existing one for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Create.json                                                                                                                                                        |
| [bareMetalMachineKeySetsDeleteSample.ts][baremetalmachinekeysetsdeletesample]                                       | Delete the bare metal machine key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Delete.json                                                                                                                                                                                      |
| [bareMetalMachineKeySetsGetSample.ts][baremetalmachinekeysetsgetsample]                                             | Get bare metal machine key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Get.json                                                                                                                                                                                                |
| [bareMetalMachineKeySetsListByClusterSample.ts][baremetalmachinekeysetslistbyclustersample]                         | Get a list of bare metal machine key sets for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_ListByCluster.json                                                                                                                                                                          |
| [bareMetalMachineKeySetsUpdateSample.ts][baremetalmachinekeysetsupdatesample]                                       | Patch properties of bare metal machine key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachineKeySets_Patch.json                                                                                |
| [bareMetalMachinesCordonSample.ts][baremetalmachinescordonsample]                                                   | Cordon the provided bare metal machine's Kubernetes node. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Cordon.json                                                                                                                                                                                                 |
| [bareMetalMachinesCreateOrUpdateSample.ts][baremetalmachinescreateorupdatesample]                                   | Create a new bare metal machine or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Create.json                                                               |
| [bareMetalMachinesDeleteSample.ts][baremetalmachinesdeletesample]                                                   | Delete the provided bare metal machine. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Delete.json                                                                                                     |
| [bareMetalMachinesGetSample.ts][baremetalmachinesgetsample]                                                         | Get properties of the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Get.json                                                                                                                                                                                                           |
| [bareMetalMachinesListByResourceGroupSample.ts][baremetalmachineslistbyresourcegroupsample]                         | Get a list of bare metal machines in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_ListByResourceGroup.json                                                                                                                                                                            |
| [bareMetalMachinesListBySubscriptionSample.ts][baremetalmachineslistbysubscriptionsample]                           | Get a list of bare metal machines in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_ListBySubscription.json                                                                                                                                                                               |
| [bareMetalMachinesPowerOffSample.ts][baremetalmachinespoweroffsample]                                               | Power off the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_PowerOff.json                                                                                                                                                                                                              |
| [bareMetalMachinesReimageSample.ts][baremetalmachinesreimagesample]                                                 | Reimage the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Reimage.json                                                                                                                                                                                                                 |
| [bareMetalMachinesReplaceSample.ts][baremetalmachinesreplacesample]                                                 | Replace the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Replace.json                                                                                                                                                                                                                 |
| [bareMetalMachinesRestartSample.ts][baremetalmachinesrestartsample]                                                 | Restart the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Restart.json                                                                                                                                                                                                                 |
| [bareMetalMachinesRunCommandSample.ts][baremetalmachinesruncommandsample]                                           | Run the command or the script on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunCommand.json                              |
| [bareMetalMachinesRunDataExtractsRestrictedSample.ts][baremetalmachinesrundataextractsrestrictedsample]             | Run one or more restricted data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunDataExtractsRestricted.json |
| [bareMetalMachinesRunDataExtractsSample.ts][baremetalmachinesrundataextractssample]                                 | Run one or more data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunDataExtracts.json                      |
| [bareMetalMachinesRunReadCommandsSample.ts][baremetalmachinesrunreadcommandssample]                                 | Run one or more read-only commands on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_RunReadCommands_Hostname.json           |
| [bareMetalMachinesStartSample.ts][baremetalmachinesstartsample]                                                     | Start the provided bare metal machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Start.json                                                                                                                                                                                                                     |
| [bareMetalMachinesUncordonSample.ts][baremetalmachinesuncordonsample]                                               | Uncordon the provided bare metal machine's Kubernetes node. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Uncordon.json                                                                                                                                                                                             |
| [bareMetalMachinesUpdateSample.ts][baremetalmachinesupdatesample]                                                   | Patch properties of the provided bare metal machine, or update tags associated with the bare metal machine. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BareMetalMachines_Patch.json                                                                                          |
| [bmcKeySetsCreateOrUpdateSample.ts][bmckeysetscreateorupdatesample]                                                 | Create a new baseboard management controller key set or update the existing one for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Create.json                                                                                                                                                        |
| [bmcKeySetsDeleteSample.ts][bmckeysetsdeletesample]                                                                 | Delete the baseboard management controller key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Delete.json                                                                                                                                                                                      |
| [bmcKeySetsGetSample.ts][bmckeysetsgetsample]                                                                       | Get baseboard management controller key set of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Get.json                                                                                                                                                                                                |
| [bmcKeySetsListByClusterSample.ts][bmckeysetslistbyclustersample]                                                   | Get a list of baseboard management controller key sets for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_ListByCluster.json                                                                                                                                                                          |
| [bmcKeySetsUpdateSample.ts][bmckeysetsupdatesample]                                                                 | Patch properties of baseboard management controller key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/BmcKeySets_Patch.json                                                                                |
| [cloudServicesNetworksCreateOrUpdateSample.ts][cloudservicesnetworkscreateorupdatesample]                           | Create a new cloud services network or update the properties of the existing cloud services network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Create.json                                                                                                                                                  |
| [cloudServicesNetworksDeleteSample.ts][cloudservicesnetworksdeletesample]                                           | Delete the provided cloud services network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Delete.json                                                                                                                                                                                                           |
| [cloudServicesNetworksGetSample.ts][cloudservicesnetworksgetsample]                                                 | Get properties of the provided cloud services network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Get.json                                                                                                                                                                                                   |
| [cloudServicesNetworksListByResourceGroupSample.ts][cloudservicesnetworkslistbyresourcegroupsample]                 | Get a list of cloud services networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_ListByResourceGroup.json                                                                                                                                                                    |
| [cloudServicesNetworksListBySubscriptionSample.ts][cloudservicesnetworkslistbysubscriptionsample]                   | Get a list of cloud services networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_ListBySubscription.json                                                                                                                                                                       |
| [cloudServicesNetworksUpdateSample.ts][cloudservicesnetworksupdatesample]                                           | Update properties of the provided cloud services network, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/CloudServicesNetworks_Patch.json                                                                                                 |
| [clusterManagersCreateOrUpdateSample.ts][clustermanagerscreateorupdatesample]                                       | Create a new cluster manager or update properties of the cluster manager if it exists. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Create.json                                                                                                                                                                      |
| [clusterManagersDeleteSample.ts][clustermanagersdeletesample]                                                       | Delete the provided cluster manager. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Delete.json                                                                                                                                                                                                                        |
| [clusterManagersGetSample.ts][clustermanagersgetsample]                                                             | Get the properties of the provided cluster manager. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Get.json                                                                                                                                                                                                            |
| [clusterManagersListByResourceGroupSample.ts][clustermanagerslistbyresourcegroupsample]                             | Get a list of cluster managers in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_ListByResourceGroup.json                                                                                                                                                                                 |
| [clusterManagersListBySubscriptionSample.ts][clustermanagerslistbysubscriptionsample]                               | Get a list of cluster managers in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_ListBySubscription.json                                                                                                                                                                                    |
| [clusterManagersUpdateSample.ts][clustermanagersupdatesample]                                                       | Patch properties of the provided cluster manager, or update the tags assigned to the cluster manager. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterManagers_Patch.json                                                                                                  |
| [clustersContinueUpdateVersionSample.ts][clusterscontinueupdateversionsample]                                       | Trigger the continuation of an update for a cluster with a matching update strategy that has paused after completing a segment of the update. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ContinueUpdateVersion.json                                                                                                       |
| [clustersCreateOrUpdateSample.ts][clusterscreateorupdatesample]                                                     | Create a new cluster or update the properties of the cluster if it exists. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Create.json                                                                                                                                                                                         |
| [clustersDeleteSample.ts][clustersdeletesample]                                                                     | Delete the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Delete.json                                                                                                                                                                                                                                       |
| [clustersDeploySample.ts][clustersdeploysample]                                                                     | Deploy the cluster using the rack configuration provided during creation. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Deploy.json                                                                                                                                                                                          |
| [clustersGetSample.ts][clustersgetsample]                                                                           | Get properties of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Get.json                                                                                                                                                                                                                               |
| [clustersListByResourceGroupSample.ts][clusterslistbyresourcegroupsample]                                           | Get a list of clusters in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ListByResourceGroup.json                                                                                                                                                                                                |
| [clustersListBySubscriptionSample.ts][clusterslistbysubscriptionsample]                                             | Get a list of clusters in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ListBySubscription.json                                                                                                                                                                                                   |
| [clustersScanRuntimeSample.ts][clustersscanruntimesample]                                                           | Triggers the execution of a runtime protection scan to detect and remediate detected issues, in accordance with the cluster configuration. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_ScanRuntime.json                                                                                                                    |
| [clustersUpdateSample.ts][clustersupdatesample]                                                                     | Patch the properties of the provided cluster, or update the tags associated with the cluster. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_Patch_AggregatorOrSingleRackDefinition.json                                                                                |
| [clustersUpdateVersionSample.ts][clustersupdateversionsample]                                                       | Update the version of the provided cluster to one of the available supported versions. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Clusters_UpdateVersion.json                                                                                                                                                                      |
| [consolesCreateOrUpdateSample.ts][consolescreateorupdatesample]                                                     | Create a new virtual machine console or update the properties of the existing virtual machine console. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Create.json                                                                                                                                                             |
| [consolesDeleteSample.ts][consolesdeletesample]                                                                     | Delete the provided virtual machine console. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Delete.json                                                                                                                                                                                                                       |
| [consolesGetSample.ts][consolesgetsample]                                                                           | Get properties of the provided virtual machine console. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Get.json                                                                                                                                                                                                               |
| [consolesListByVirtualMachineSample.ts][consoleslistbyvirtualmachinesample]                                         | Get a list of consoles for the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_ListByVirtualMachine.json                                                                                                                                                                                             |
| [consolesUpdateSample.ts][consolesupdatesample]                                                                     | Patch the properties of the provided virtual machine console, or update the tags associated with the virtual machine console. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Consoles_Patch.json                                                                                 |
| [kubernetesClusterFeaturesCreateOrUpdateSample.ts][kubernetesclusterfeaturescreateorupdatesample]                   | Create a new Kubernetes cluster feature or update properties of the Kubernetes cluster feature if it exists. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Create.json                                                                                                                                      |
| [kubernetesClusterFeaturesDeleteSample.ts][kubernetesclusterfeaturesdeletesample]                                   | Delete the provided Kubernetes cluster feature. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Delete.json                                                                                                                                                                                                   |
| [kubernetesClusterFeaturesGetSample.ts][kubernetesclusterfeaturesgetsample]                                         | Get properties of the provided the Kubernetes cluster feature. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Get.json                                                                                                                                                                                       |
| [kubernetesClusterFeaturesListByKubernetesClusterSample.ts][kubernetesclusterfeatureslistbykubernetesclustersample] | Get a list of features for the provided Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_ListByKubernetesCluster.json                                                                                                                                                                      |
| [kubernetesClusterFeaturesUpdateSample.ts][kubernetesclusterfeaturesupdatesample]                                   | Patch properties of the provided Kubernetes cluster feature. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusterFeatures_Patch.json                                                                                                                                                                                       |
| [kubernetesClustersCreateOrUpdateSample.ts][kubernetesclusterscreateorupdatesample]                                 | Create a new Kubernetes cluster or update the properties of the existing one. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Create.json                                                                                                                                                                            |
| [kubernetesClustersDeleteSample.ts][kubernetesclustersdeletesample]                                                 | Delete the provided Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Delete.json                                                                                                                                                                                                                  |
| [kubernetesClustersGetSample.ts][kubernetesclustersgetsample]                                                       | Get properties of the provided the Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Get.json                                                                                                                                                                                                      |
| [kubernetesClustersListByResourceGroupSample.ts][kubernetesclusterslistbyresourcegroupsample]                       | Get a list of Kubernetes clusters in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_ListByResourceGroup.json                                                                                                                                                                           |
| [kubernetesClustersListBySubscriptionSample.ts][kubernetesclusterslistbysubscriptionsample]                         | Get a list of Kubernetes clusters in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_ListBySubscription.json                                                                                                                                                                              |
| [kubernetesClustersRestartNodeSample.ts][kubernetesclustersrestartnodesample]                                       | Restart a targeted node of a Kubernetes cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_RestartNode.json                                                                                                                                                                                                    |
| [kubernetesClustersUpdateSample.ts][kubernetesclustersupdatesample]                                                 | Patch the properties of the provided Kubernetes cluster, or update the tags associated with the Kubernetes cluster. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/KubernetesClusters_Patch.json                                                                                 |
| [l2NetworksCreateOrUpdateSample.ts][l2networkscreateorupdatesample]                                                 | Create a new layer 2 (L2) network or update the properties of the existing network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Create.json                                                                                                                                                                              |
| [l2NetworksDeleteSample.ts][l2networksdeletesample]                                                                 | Delete the provided layer 2 (L2) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Delete.json                                                                                                                                                                                                                        |
| [l2NetworksGetSample.ts][l2networksgetsample]                                                                       | Get properties of the provided layer 2 (L2) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Get.json                                                                                                                                                                                                                |
| [l2NetworksListByResourceGroupSample.ts][l2networkslistbyresourcegroupsample]                                       | Get a list of layer 2 (L2) networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_ListByResourceGroup.json                                                                                                                                                                                 |
| [l2NetworksListBySubscriptionSample.ts][l2networkslistbysubscriptionsample]                                         | Get a list of layer 2 (L2) networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_ListBySubscription.json                                                                                                                                                                                    |
| [l2NetworksUpdateSample.ts][l2networksupdatesample]                                                                 | Update tags associated with the provided layer 2 (L2) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L2Networks_Patch.json                                                                                                                                                                                                    |
| [l3NetworksCreateOrUpdateSample.ts][l3networkscreateorupdatesample]                                                 | Create a new layer 3 (L3) network or update the properties of the existing network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Create.json                                                                                                                                                                              |
| [l3NetworksDeleteSample.ts][l3networksdeletesample]                                                                 | Delete the provided layer 3 (L3) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Delete.json                                                                                                                                                                                                                        |
| [l3NetworksGetSample.ts][l3networksgetsample]                                                                       | Get properties of the provided layer 3 (L3) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Get.json                                                                                                                                                                                                                |
| [l3NetworksListByResourceGroupSample.ts][l3networkslistbyresourcegroupsample]                                       | Get a list of layer 3 (L3) networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_ListByResourceGroup.json                                                                                                                                                                                 |
| [l3NetworksListBySubscriptionSample.ts][l3networkslistbysubscriptionsample]                                         | Get a list of layer 3 (L3) networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_ListBySubscription.json                                                                                                                                                                                    |
| [l3NetworksUpdateSample.ts][l3networksupdatesample]                                                                 | Update tags associated with the provided layer 3 (L3) network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/L3Networks_Patch.json                                                                                                                                                                                                    |
| [metricsConfigurationsCreateOrUpdateSample.ts][metricsconfigurationscreateorupdatesample]                           | Create new or update the existing metrics configuration of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Create.json                                                                                                                                                               |
| [metricsConfigurationsDeleteSample.ts][metricsconfigurationsdeletesample]                                           | Delete the metrics configuration of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Delete.json                                                                                                                                                                                      |
| [metricsConfigurationsGetSample.ts][metricsconfigurationsgetsample]                                                 | Get metrics configuration of the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Get.json                                                                                                                                                                                                |
| [metricsConfigurationsListByClusterSample.ts][metricsconfigurationslistbyclustersample]                             | Get a list of metrics configurations for the provided cluster. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_ListByCluster.json                                                                                                                                                                          |
| [metricsConfigurationsUpdateSample.ts][metricsconfigurationsupdatesample]                                           | Patch properties of metrics configuration for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/ClusterMetricsConfigurations_Patch.json                                                                                |
| [operationsListSample.ts][operationslistsample]                                                                     | Get a list of all available resource provider operations. It contains a URL link to get the next set of results. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Operations_List.json                                                                                                                                                   |
| [rackSkusGetSample.ts][rackskusgetsample]                                                                           | Get the properties of the provided rack SKU. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/RackSkus_Get.json                                                                                                                                                                                                                          |
| [rackSkusListBySubscriptionSample.ts][rackskuslistbysubscriptionsample]                                             | Get a list of rack SKUs in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/RackSkus_ListBySubscription.json                                                                                                                                                                                                  |
| [racksCreateOrUpdateSample.ts][rackscreateorupdatesample]                                                           | Create a new rack or update properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Create.json                                                                                             |
| [racksDeleteSample.ts][racksdeletesample]                                                                           | Delete the provided rack. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Delete.json                                                                                                                               |
| [racksGetSample.ts][racksgetsample]                                                                                 | Get properties of the provided rack. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Get.json                                                                                                                                                                                                                                     |
| [racksListByResourceGroupSample.ts][rackslistbyresourcegroupsample]                                                 | Get a list of racks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_ListByResourceGroup.json                                                                                                                                                                                                      |
| [racksListBySubscriptionSample.ts][rackslistbysubscriptionsample]                                                   | Get a list of racks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_ListBySubscription.json                                                                                                                                                                                                         |
| [racksUpdateSample.ts][racksupdatesample]                                                                           | Patch properties of the provided rack, or update the tags associated with the rack. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Racks_Patch.json                                                                                                                              |
| [storageAppliancesCreateOrUpdateSample.ts][storageappliancescreateorupdatesample]                                   | Create a new storage appliance or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Create.json                                                                |
| [storageAppliancesDeleteSample.ts][storageappliancesdeletesample]                                                   | Delete the provided storage appliance. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Delete.json                                                                                                      |
| [storageAppliancesDisableRemoteVendorManagementSample.ts][storageappliancesdisableremotevendormanagementsample]     | Disable remote vendor management of the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_DisableRemoteVendorManagement.json                                                                                                                                                                |
| [storageAppliancesEnableRemoteVendorManagementSample.ts][storageappliancesenableremotevendormanagementsample]       | Enable remote vendor management of the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_EnableRemoteVendorManagement.json                                                                                                                                                                  |
| [storageAppliancesGetSample.ts][storageappliancesgetsample]                                                         | Get properties of the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Get.json                                                                                                                                                                                                            |
| [storageAppliancesListByResourceGroupSample.ts][storageapplianceslistbyresourcegroupsample]                         | Get a list of storage appliances in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_ListByResourceGroup.json                                                                                                                                                                             |
| [storageAppliancesListBySubscriptionSample.ts][storageapplianceslistbysubscriptionsample]                           | Get a list of storage appliances in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_ListBySubscription.json                                                                                                                                                                                |
| [storageAppliancesRunReadCommandsSample.ts][storageappliancesrunreadcommandssample]                                 | Run one or more read-only commands on the provided storage appliance. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_RunReadCommands.json                                                                                                                                                                            |
| [storageAppliancesUpdateSample.ts][storageappliancesupdatesample]                                                   | Update properties of the provided storage appliance, or update tags associated with the storage appliance Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/StorageAppliances_Patch.json                                                                                            |
| [trunkedNetworksCreateOrUpdateSample.ts][trunkednetworkscreateorupdatesample]                                       | Create a new trunked network or update the properties of the existing trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Create.json                                                                                                                                                                      |
| [trunkedNetworksDeleteSample.ts][trunkednetworksdeletesample]                                                       | Delete the provided trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Delete.json                                                                                                                                                                                                                        |
| [trunkedNetworksGetSample.ts][trunkednetworksgetsample]                                                             | Get properties of the provided trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Get.json                                                                                                                                                                                                                |
| [trunkedNetworksListByResourceGroupSample.ts][trunkednetworkslistbyresourcegroupsample]                             | Get a list of trunked networks in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_ListByResourceGroup.json                                                                                                                                                                                 |
| [trunkedNetworksListBySubscriptionSample.ts][trunkednetworkslistbysubscriptionsample]                               | Get a list of trunked networks in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_ListBySubscription.json                                                                                                                                                                                    |
| [trunkedNetworksUpdateSample.ts][trunkednetworksupdatesample]                                                       | Update tags associated with the provided trunked network. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/TrunkedNetworks_Patch.json                                                                                                                                                                                                    |
| [virtualMachinesAssignRelaySample.ts][virtualmachinesassignrelaysample]                                             | Assigns a relay to the specified Microsoft.HybridCompute machine associated with the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_AssignRelay.json                                                                                                                                         |
| [virtualMachinesCreateOrUpdateSample.ts][virtualmachinescreateorupdatesample]                                       | Create a new virtual machine or update the properties of the existing virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Create.json                                                                                                                                                                      |
| [virtualMachinesDeleteSample.ts][virtualmachinesdeletesample]                                                       | Delete the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Delete.json                                                                                                                                                                                                                        |
| [virtualMachinesGetSample.ts][virtualmachinesgetsample]                                                             | Get properties of the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Get.json                                                                                                                                                                                                                |
| [virtualMachinesListByResourceGroupSample.ts][virtualmachineslistbyresourcegroupsample]                             | Get a list of virtual machines in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_ListByResourceGroup.json                                                                                                                                                                                 |
| [virtualMachinesListBySubscriptionSample.ts][virtualmachineslistbysubscriptionsample]                               | Get a list of virtual machines in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_ListBySubscription.json                                                                                                                                                                                    |
| [virtualMachinesPowerOffSample.ts][virtualmachinespoweroffsample]                                                   | Power off the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_PowerOff.json                                                                                                                                                                                                                   |
| [virtualMachinesReimageSample.ts][virtualmachinesreimagesample]                                                     | Reimage the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Reimage.json                                                                                                                                                                                                                      |
| [virtualMachinesRestartSample.ts][virtualmachinesrestartsample]                                                     | Restart the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Restart.json                                                                                                                                                                                                                      |
| [virtualMachinesStartSample.ts][virtualmachinesstartsample]                                                         | Start the provided virtual machine. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Start.json                                                                                                                                                                                                                          |
| [virtualMachinesUpdateSample.ts][virtualmachinesupdatesample]                                                       | Patch the properties of the provided virtual machine, or update the tags associated with the virtual machine. Properties and tag updates can be done independently. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/VirtualMachines_Patch.json                                                                                          |
| [volumesCreateOrUpdateSample.ts][volumescreateorupdatesample]                                                       | Create a new volume or update the properties of the existing one. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Create.json                                                                                                                                                                                                   |
| [volumesDeleteSample.ts][volumesdeletesample]                                                                       | Delete the provided volume. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Delete.json                                                                                                                                                                                                                                         |
| [volumesGetSample.ts][volumesgetsample]                                                                             | Get properties of the provided volume. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Get.json                                                                                                                                                                                                                                 |
| [volumesListByResourceGroupSample.ts][volumeslistbyresourcegroupsample]                                             | Get a list of volumes in the provided resource group. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_ListByResourceGroup.json                                                                                                                                                                                                  |
| [volumesListBySubscriptionSample.ts][volumeslistbysubscriptionsample]                                               | Get a list of volumes in the provided subscription. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_ListBySubscription.json                                                                                                                                                                                                     |
| [volumesUpdateSample.ts][volumesupdatesample]                                                                       | Update tags associated with the provided volume. x-ms-original-file: specification/networkcloud/resource-manager/Microsoft.NetworkCloud/stable/2025-09-01/examples/Volumes_Patch.json                                                                                                                                                                                                                     |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/agentPoolsCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
npx cross-env NETWORKCLOUD_SUBSCRIPTION_ID="<networkcloud subscription id>" NETWORKCLOUD_RESOURCE_GROUP="<networkcloud resource group>" node dist/agentPoolsCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/agentPoolsCreateOrUpdateSample.ts
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/agentPoolsDeleteSample.ts
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/agentPoolsGetSample.ts
[agentpoolslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/agentPoolsListByKubernetesClusterSample.ts
[agentpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/agentPoolsUpdateSample.ts
[baremetalmachinekeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachineKeySetsCreateOrUpdateSample.ts
[baremetalmachinekeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachineKeySetsDeleteSample.ts
[baremetalmachinekeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachineKeySetsGetSample.ts
[baremetalmachinekeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachineKeySetsListByClusterSample.ts
[baremetalmachinekeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachineKeySetsUpdateSample.ts
[baremetalmachinescordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesCordonSample.ts
[baremetalmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesCreateOrUpdateSample.ts
[baremetalmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesDeleteSample.ts
[baremetalmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesGetSample.ts
[baremetalmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesListByResourceGroupSample.ts
[baremetalmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesListBySubscriptionSample.ts
[baremetalmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesPowerOffSample.ts
[baremetalmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesReimageSample.ts
[baremetalmachinesreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesReplaceSample.ts
[baremetalmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesRestartSample.ts
[baremetalmachinesruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesRunCommandSample.ts
[baremetalmachinesrundataextractsrestrictedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesRunDataExtractsRestrictedSample.ts
[baremetalmachinesrundataextractssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesRunDataExtractsSample.ts
[baremetalmachinesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesRunReadCommandsSample.ts
[baremetalmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesStartSample.ts
[baremetalmachinesuncordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesUncordonSample.ts
[baremetalmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bareMetalMachinesUpdateSample.ts
[bmckeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bmcKeySetsCreateOrUpdateSample.ts
[bmckeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bmcKeySetsDeleteSample.ts
[bmckeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bmcKeySetsGetSample.ts
[bmckeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bmcKeySetsListByClusterSample.ts
[bmckeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/bmcKeySetsUpdateSample.ts
[cloudservicesnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/cloudServicesNetworksCreateOrUpdateSample.ts
[cloudservicesnetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/cloudServicesNetworksDeleteSample.ts
[cloudservicesnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/cloudServicesNetworksGetSample.ts
[cloudservicesnetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/cloudServicesNetworksListByResourceGroupSample.ts
[cloudservicesnetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/cloudServicesNetworksListBySubscriptionSample.ts
[cloudservicesnetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/cloudServicesNetworksUpdateSample.ts
[clustermanagerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clusterManagersCreateOrUpdateSample.ts
[clustermanagersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clusterManagersDeleteSample.ts
[clustermanagersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clusterManagersGetSample.ts
[clustermanagerslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clusterManagersListByResourceGroupSample.ts
[clustermanagerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clusterManagersListBySubscriptionSample.ts
[clustermanagersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clusterManagersUpdateSample.ts
[clusterscontinueupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersContinueUpdateVersionSample.ts
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersCreateOrUpdateSample.ts
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersDeleteSample.ts
[clustersdeploysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersDeploySample.ts
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersGetSample.ts
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersListByResourceGroupSample.ts
[clusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersListBySubscriptionSample.ts
[clustersscanruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersScanRuntimeSample.ts
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersUpdateSample.ts
[clustersupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/clustersUpdateVersionSample.ts
[consolescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/consolesCreateOrUpdateSample.ts
[consolesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/consolesDeleteSample.ts
[consolesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/consolesGetSample.ts
[consoleslistbyvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/consolesListByVirtualMachineSample.ts
[consolesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/consolesUpdateSample.ts
[kubernetesclusterfeaturescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClusterFeaturesCreateOrUpdateSample.ts
[kubernetesclusterfeaturesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClusterFeaturesDeleteSample.ts
[kubernetesclusterfeaturesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClusterFeaturesGetSample.ts
[kubernetesclusterfeatureslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClusterFeaturesListByKubernetesClusterSample.ts
[kubernetesclusterfeaturesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClusterFeaturesUpdateSample.ts
[kubernetesclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersCreateOrUpdateSample.ts
[kubernetesclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersDeleteSample.ts
[kubernetesclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersGetSample.ts
[kubernetesclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersListByResourceGroupSample.ts
[kubernetesclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersListBySubscriptionSample.ts
[kubernetesclustersrestartnodesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersRestartNodeSample.ts
[kubernetesclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/kubernetesClustersUpdateSample.ts
[l2networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l2NetworksCreateOrUpdateSample.ts
[l2networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l2NetworksDeleteSample.ts
[l2networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l2NetworksGetSample.ts
[l2networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l2NetworksListByResourceGroupSample.ts
[l2networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l2NetworksListBySubscriptionSample.ts
[l2networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l2NetworksUpdateSample.ts
[l3networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l3NetworksCreateOrUpdateSample.ts
[l3networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l3NetworksDeleteSample.ts
[l3networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l3NetworksGetSample.ts
[l3networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l3NetworksListByResourceGroupSample.ts
[l3networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l3NetworksListBySubscriptionSample.ts
[l3networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/l3NetworksUpdateSample.ts
[metricsconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/metricsConfigurationsCreateOrUpdateSample.ts
[metricsconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/metricsConfigurationsDeleteSample.ts
[metricsconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/metricsConfigurationsGetSample.ts
[metricsconfigurationslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/metricsConfigurationsListByClusterSample.ts
[metricsconfigurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/metricsConfigurationsUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/operationsListSample.ts
[rackskusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/rackSkusGetSample.ts
[rackskuslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/rackSkusListBySubscriptionSample.ts
[rackscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/racksCreateOrUpdateSample.ts
[racksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/racksDeleteSample.ts
[racksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/racksGetSample.ts
[rackslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/racksListByResourceGroupSample.ts
[rackslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/racksListBySubscriptionSample.ts
[racksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/racksUpdateSample.ts
[storageappliancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesCreateOrUpdateSample.ts
[storageappliancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesDeleteSample.ts
[storageappliancesdisableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesDisableRemoteVendorManagementSample.ts
[storageappliancesenableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesEnableRemoteVendorManagementSample.ts
[storageappliancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesGetSample.ts
[storageapplianceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesListByResourceGroupSample.ts
[storageapplianceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesListBySubscriptionSample.ts
[storageappliancesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesRunReadCommandsSample.ts
[storageappliancesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/storageAppliancesUpdateSample.ts
[trunkednetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/trunkedNetworksCreateOrUpdateSample.ts
[trunkednetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/trunkedNetworksDeleteSample.ts
[trunkednetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/trunkedNetworksGetSample.ts
[trunkednetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/trunkedNetworksListByResourceGroupSample.ts
[trunkednetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/trunkedNetworksListBySubscriptionSample.ts
[trunkednetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/trunkedNetworksUpdateSample.ts
[virtualmachinesassignrelaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesAssignRelaySample.ts
[virtualmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesCreateOrUpdateSample.ts
[virtualmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesDeleteSample.ts
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesGetSample.ts
[virtualmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesListByResourceGroupSample.ts
[virtualmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesListBySubscriptionSample.ts
[virtualmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesPowerOffSample.ts
[virtualmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesReimageSample.ts
[virtualmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesRestartSample.ts
[virtualmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesStartSample.ts
[virtualmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/virtualMachinesUpdateSample.ts
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/volumesCreateOrUpdateSample.ts
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/volumesDeleteSample.ts
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/volumesGetSample.ts
[volumeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/volumesListByResourceGroupSample.ts
[volumeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/volumesListBySubscriptionSample.ts
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v1/typescript/src/volumesUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-networkcloud?view=azure-node-preview
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/networkcloud/arm-networkcloud/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
