sdk/networkcloud/arm-networkcloud/samples/v2/typescript/README.md
# @azure/arm-networkcloud client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-networkcloud in some common scenarios.

| **File Name**                                                                                                             | **Description**                                                                                                                                                                                                                                                                                                                                               |
| ------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [accessBridgesCreateOrUpdateSample.ts][accessbridgescreateorupdatesample]                                                 | create a new access bridge or update the properties of the existing access bridge. x-ms-original-file: 2026-07-01/AccessBridges_CreateOrUpdate.json                                                                                                                                                                                                           |
| [accessBridgesDeleteSample.ts][accessbridgesdeletesample]                                                                 | delete the specified access bridge. x-ms-original-file: 2026-07-01/AccessBridges_Delete.json                                                                                                                                                                                                                                                                  |
| [accessBridgesGetSample.ts][accessbridgesgetsample]                                                                       | get the properties of the provided access bridge. x-ms-original-file: 2026-07-01/AccessBridges_Get.json                                                                                                                                                                                                                                                       |
| [accessBridgesListByResourceGroupSample.ts][accessbridgeslistbyresourcegroupsample]                                       | get a list of access bridges in the provided resource group. x-ms-original-file: 2026-07-01/AccessBridges_ListByResourceGroup.json                                                                                                                                                                                                                            |
| [accessBridgesListBySubscriptionSample.ts][accessbridgeslistbysubscriptionsample]                                         | get a list of access bridges in the provided subscription. x-ms-original-file: 2026-07-01/AccessBridges_ListBySubscription.json                                                                                                                                                                                                                               |
| [accessBridgesUpdateSample.ts][accessbridgesupdatesample]                                                                 | update properties of the provided access bridge, or update tags associated with the access bridge. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/AccessBridges_Patch.json                                                                                                                                              |
| [agentPoolsCreateOrUpdateSample.ts][agentpoolscreateorupdatesample]                                                       | create a new Kubernetes cluster agent pool or update the properties of the existing one. x-ms-original-file: 2026-07-01/AgentPools_Create.json                                                                                                                                                                                                                |
| [agentPoolsDeleteSample.ts][agentpoolsdeletesample]                                                                       | delete the provided Kubernetes cluster agent pool. x-ms-original-file: 2026-07-01/AgentPools_Delete.json                                                                                                                                                                                                                                                      |
| [agentPoolsGetSample.ts][agentpoolsgetsample]                                                                             | get properties of the provided Kubernetes cluster agent pool. x-ms-original-file: 2026-07-01/AgentPools_Get.json                                                                                                                                                                                                                                              |
| [agentPoolsListByKubernetesClusterSample.ts][agentpoolslistbykubernetesclustersample]                                     | get a list of agent pools for the provided Kubernetes cluster. x-ms-original-file: 2026-07-01/AgentPools_ListByKubernetesCluster.json                                                                                                                                                                                                                         |
| [agentPoolsUpdateSample.ts][agentpoolsupdatesample]                                                                       | patch the properties of the provided Kubernetes cluster agent pool, or update the tags associated with the Kubernetes cluster agent pool. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/AgentPools_Patch.json                                                                                                          |
| [bareMetalMachineKeySetsCreateOrUpdateSample.ts][baremetalmachinekeysetscreateorupdatesample]                             | create a new bare metal machine key set or update the existing one for the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Create.json                                                                                                                                                                                               |
| [bareMetalMachineKeySetsDeleteSample.ts][baremetalmachinekeysetsdeletesample]                                             | delete the bare metal machine key set of the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Delete.json                                                                                                                                                                                                                             |
| [bareMetalMachineKeySetsGetSample.ts][baremetalmachinekeysetsgetsample]                                                   | get bare metal machine key set of the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Get.json                                                                                                                                                                                                                                       |
| [bareMetalMachineKeySetsListByClusterSample.ts][baremetalmachinekeysetslistbyclustersample]                               | get a list of bare metal machine key sets for the provided cluster. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_ListByCluster.json                                                                                                                                                                                                                 |
| [bareMetalMachineKeySetsUpdateSample.ts][baremetalmachinekeysetsupdatesample]                                             | patch properties of bare metal machine key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/BareMetalMachineKeySets_Patch.json                                                                                                                       |
| [bareMetalMachinesCordonSample.ts][baremetalmachinescordonsample]                                                         | cordon the provided bare metal machine's Kubernetes node. x-ms-original-file: 2026-07-01/BareMetalMachines_Cordon.json                                                                                                                                                                                                                                        |
| [bareMetalMachinesCreateOrUpdateSample.ts][baremetalmachinescreateorupdatesample]                                         | create a new bare metal machine or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/BareMetalMachines_Create.json                                                                                                      |
| [bareMetalMachinesDeleteSample.ts][baremetalmachinesdeletesample]                                                         | delete the provided bare metal machine. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/BareMetalMachines_Delete.json                                                                                                                                            |
| [bareMetalMachinesGetSample.ts][baremetalmachinesgetsample]                                                               | get properties of the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Get.json                                                                                                                                                                                                                                                  |
| [bareMetalMachinesListByResourceGroupSample.ts][baremetalmachineslistbyresourcegroupsample]                               | get a list of bare metal machines in the provided resource group. x-ms-original-file: 2026-07-01/BareMetalMachines_ListByResourceGroup.json                                                                                                                                                                                                                   |
| [bareMetalMachinesListBySubscriptionSample.ts][baremetalmachineslistbysubscriptionsample]                                 | get a list of bare metal machines in the provided subscription. x-ms-original-file: 2026-07-01/BareMetalMachines_ListBySubscription.json                                                                                                                                                                                                                      |
| [bareMetalMachinesPowerOffSample.ts][baremetalmachinespoweroffsample]                                                     | power off the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_PowerOff.json                                                                                                                                                                                                                                                     |
| [bareMetalMachinesReimageSample.ts][baremetalmachinesreimagesample]                                                       | reimage the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Reimage.json                                                                                                                                                                                                                                                        |
| [bareMetalMachinesReplaceSample.ts][baremetalmachinesreplacesample]                                                       | replace the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Replace.json                                                                                                                                                                                                                                                        |
| [bareMetalMachinesRestartSample.ts][baremetalmachinesrestartsample]                                                       | restart the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Restart.json                                                                                                                                                                                                                                                        |
| [bareMetalMachinesRunCommandSample.ts][baremetalmachinesruncommandsample]                                                 | run the command or the script on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunCommand.json                                                                     |
| [bareMetalMachinesRunDataExtractsRestrictedSample.ts][baremetalmachinesrundataextractsrestrictedsample]                   | run one or more restricted data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunDataExtractsRestricted.json                                        |
| [bareMetalMachinesRunDataExtractsSample.ts][baremetalmachinesrundataextractssample]                                       | run one or more data extractions on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunDataExtracts.json                                                             |
| [bareMetalMachinesRunReadCommandsSample.ts][baremetalmachinesrunreadcommandssample]                                       | run one or more read-only commands on the provided bare metal machine. The URL to storage account with the command execution results and the command exit code can be retrieved from the operation status API once available. x-ms-original-file: 2026-07-01/BareMetalMachines_RunReadCommands_Hostname.json                                                  |
| [bareMetalMachinesStartSample.ts][baremetalmachinesstartsample]                                                           | start the provided bare metal machine. x-ms-original-file: 2026-07-01/BareMetalMachines_Start.json                                                                                                                                                                                                                                                            |
| [bareMetalMachinesUncordonSample.ts][baremetalmachinesuncordonsample]                                                     | uncordon the provided bare metal machine's Kubernetes node. x-ms-original-file: 2026-07-01/BareMetalMachines_Uncordon.json                                                                                                                                                                                                                                    |
| [bareMetalMachinesUpdateSample.ts][baremetalmachinesupdatesample]                                                         | patch properties of the provided bare metal machine, or update tags associated with the bare metal machine. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/BareMetalMachines_Patch.json                                                                                                                                 |
| [bmcKeySetsCreateOrUpdateSample.ts][bmckeysetscreateorupdatesample]                                                       | create a new baseboard management controller key set or update the existing one for the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_Create.json                                                                                                                                                                                               |
| [bmcKeySetsDeleteSample.ts][bmckeysetsdeletesample]                                                                       | delete the baseboard management controller key set of the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_Delete.json                                                                                                                                                                                                                             |
| [bmcKeySetsGetSample.ts][bmckeysetsgetsample]                                                                             | get baseboard management controller key set of the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_Get.json                                                                                                                                                                                                                                       |
| [bmcKeySetsListByClusterSample.ts][bmckeysetslistbyclustersample]                                                         | get a list of baseboard management controller key sets for the provided cluster. x-ms-original-file: 2026-07-01/BmcKeySets_ListByCluster.json                                                                                                                                                                                                                 |
| [bmcKeySetsUpdateSample.ts][bmckeysetsupdatesample]                                                                       | patch properties of baseboard management controller key set for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/BmcKeySets_Patch.json                                                                                                                       |
| [cloudServicesNetworksCreateOrUpdateSample.ts][cloudservicesnetworkscreateorupdatesample]                                 | create a new cloud services network or update the properties of the existing cloud services network. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Create.json                                                                                                                                                                                         |
| [cloudServicesNetworksDeleteSample.ts][cloudservicesnetworksdeletesample]                                                 | delete the provided cloud services network. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Delete.json                                                                                                                                                                                                                                                  |
| [cloudServicesNetworksGetSample.ts][cloudservicesnetworksgetsample]                                                       | get properties of the provided cloud services network. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Get.json                                                                                                                                                                                                                                          |
| [cloudServicesNetworksListByResourceGroupSample.ts][cloudservicesnetworkslistbyresourcegroupsample]                       | get a list of cloud services networks in the provided resource group. x-ms-original-file: 2026-07-01/CloudServicesNetworks_ListByResourceGroup.json                                                                                                                                                                                                           |
| [cloudServicesNetworksListBySubscriptionSample.ts][cloudservicesnetworkslistbysubscriptionsample]                         | get a list of cloud services networks in the provided subscription. x-ms-original-file: 2026-07-01/CloudServicesNetworks_ListBySubscription.json                                                                                                                                                                                                              |
| [cloudServicesNetworksUpdateSample.ts][cloudservicesnetworksupdatesample]                                                 | update properties of the provided cloud services network, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/CloudServicesNetworks_Patch.json                                                                                                                                        |
| [clusterManagersCreateOrUpdateSample.ts][clustermanagerscreateorupdatesample]                                             | create a new cluster manager or update properties of the cluster manager if it exists. x-ms-original-file: 2026-07-01/ClusterManagers_Create.json                                                                                                                                                                                                             |
| [clusterManagersDeleteSample.ts][clustermanagersdeletesample]                                                             | delete the provided cluster manager. x-ms-original-file: 2026-07-01/ClusterManagers_Delete.json                                                                                                                                                                                                                                                               |
| [clusterManagersGetSample.ts][clustermanagersgetsample]                                                                   | get the properties of the provided cluster manager. x-ms-original-file: 2026-07-01/ClusterManagers_Get.json                                                                                                                                                                                                                                                   |
| [clusterManagersListByResourceGroupSample.ts][clustermanagerslistbyresourcegroupsample]                                   | get a list of cluster managers in the provided resource group. x-ms-original-file: 2026-07-01/ClusterManagers_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [clusterManagersListBySubscriptionSample.ts][clustermanagerslistbysubscriptionsample]                                     | get a list of cluster managers in the provided subscription. x-ms-original-file: 2026-07-01/ClusterManagers_ListBySubscription.json                                                                                                                                                                                                                           |
| [clusterManagersUpdateRelayPrivateEndpointConnectionSample.ts][clustermanagersupdaterelayprivateendpointconnectionsample] | update the private endpoint connection for the Azure Relay namespace managed by the specified cluster manager. Use this operation to approve or reject a pending private endpoint connection request for the relay namespace managed by the cluster manager. x-ms-original-file: 2026-07-01/ClusterManagers_UpdateRelayPrivateEndpointConnection_Approve.json |
| [clusterManagersUpdateSample.ts][clustermanagersupdatesample]                                                             | patch properties of the provided cluster manager, or update the tags assigned to the cluster manager. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/ClusterManagers_Patch.json                                                                                                                                         |
| [clustersContinueUpdateVersionSample.ts][clusterscontinueupdateversionsample]                                             | trigger the continuation of an update for a cluster with a matching update strategy that has paused after completing a segment of the update. x-ms-original-file: 2026-07-01/Clusters_ContinueUpdateVersion.json                                                                                                                                              |
| [clustersCreateOrUpdateSample.ts][clusterscreateorupdatesample]                                                           | create a new cluster or update the properties of the cluster if it exists. x-ms-original-file: 2026-07-01/Clusters_Create.json                                                                                                                                                                                                                                |
| [clustersDeleteSample.ts][clustersdeletesample]                                                                           | delete the provided cluster. x-ms-original-file: 2026-07-01/Clusters_Delete.json                                                                                                                                                                                                                                                                              |
| [clustersDeploySample.ts][clustersdeploysample]                                                                           | deploy the cluster using the rack configuration provided during creation. x-ms-original-file: 2026-07-01/Clusters_Deploy.json                                                                                                                                                                                                                                 |
| [clustersGetSample.ts][clustersgetsample]                                                                                 | get properties of the provided cluster. x-ms-original-file: 2026-07-01/Clusters_Get.json                                                                                                                                                                                                                                                                      |
| [clustersInspectSample.ts][clustersinspectsample]                                                                         | trigger an inspection of the cluster to perform validation and optional corrective actions based on the supplied additional actions and filters. x-ms-original-file: 2026-07-01/Clusters_Inspect.json                                                                                                                                                         |
| [clustersListByResourceGroupSample.ts][clusterslistbyresourcegroupsample]                                                 | get a list of clusters in the provided resource group. x-ms-original-file: 2026-07-01/Clusters_ListByResourceGroup.json                                                                                                                                                                                                                                       |
| [clustersListBySubscriptionSample.ts][clusterslistbysubscriptionsample]                                                   | get a list of clusters in the provided subscription. x-ms-original-file: 2026-07-01/Clusters_ListBySubscription.json                                                                                                                                                                                                                                          |
| [clustersRotateCredentialSample.ts][clustersrotatecredentialsample]                                                       | rotate the specified cluster credential. x-ms-original-file: 2026-07-01/Clusters_RotateCredential.json                                                                                                                                                                                                                                                        |
| [clustersScanRuntimeSample.ts][clustersscanruntimesample]                                                                 | triggers the execution of a runtime protection scan to detect and remediate detected issues, in accordance with the cluster configuration. x-ms-original-file: 2026-07-01/Clusters_ScanRuntime.json                                                                                                                                                           |
| [clustersUpdateSample.ts][clustersupdatesample]                                                                           | patch the properties of the provided cluster, or update the tags associated with the cluster. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/Clusters_Patch_AggregatorOrSingleRackDefinition.json                                                                                                                       |
| [clustersUpdateVersionSample.ts][clustersupdateversionsample]                                                             | update the version of the provided cluster to one of the available supported versions. x-ms-original-file: 2026-07-01/Clusters_UpdateVersion.json                                                                                                                                                                                                             |
| [consolesCreateOrUpdateSample.ts][consolescreateorupdatesample]                                                           | create a new virtual machine console or update the properties of the existing virtual machine console. x-ms-original-file: 2026-07-01/Consoles_Create.json                                                                                                                                                                                                    |
| [consolesDeleteSample.ts][consolesdeletesample]                                                                           | delete the provided virtual machine console. x-ms-original-file: 2026-07-01/Consoles_Delete.json                                                                                                                                                                                                                                                              |
| [consolesGetSample.ts][consolesgetsample]                                                                                 | get properties of the provided virtual machine console. x-ms-original-file: 2026-07-01/Consoles_Get.json                                                                                                                                                                                                                                                      |
| [consolesListByVirtualMachineSample.ts][consoleslistbyvirtualmachinesample]                                               | get a list of consoles for the provided virtual machine. x-ms-original-file: 2026-07-01/Consoles_ListByVirtualMachine.json                                                                                                                                                                                                                                    |
| [consolesUpdateSample.ts][consolesupdatesample]                                                                           | patch the properties of the provided virtual machine console, or update the tags associated with the virtual machine console. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/Consoles_Patch.json                                                                                                                        |
| [kubernetesClusterFeaturesCreateOrUpdateSample.ts][kubernetesclusterfeaturescreateorupdatesample]                         | create a new Kubernetes cluster feature or update properties of the Kubernetes cluster feature if it exists. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Create.json                                                                                                                                                                             |
| [kubernetesClusterFeaturesDeleteSample.ts][kubernetesclusterfeaturesdeletesample]                                         | delete the provided Kubernetes cluster feature. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Delete.json                                                                                                                                                                                                                                          |
| [kubernetesClusterFeaturesGetSample.ts][kubernetesclusterfeaturesgetsample]                                               | get properties of the provided the Kubernetes cluster feature. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Get.json                                                                                                                                                                                                                              |
| [kubernetesClusterFeaturesListByKubernetesClusterSample.ts][kubernetesclusterfeatureslistbykubernetesclustersample]       | get a list of features for the provided Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_ListByKubernetesCluster.json                                                                                                                                                                                                             |
| [kubernetesClusterFeaturesUpdateSample.ts][kubernetesclusterfeaturesupdatesample]                                         | patch properties of the provided Kubernetes cluster feature. x-ms-original-file: 2026-07-01/KubernetesClusterFeatures_Patch.json                                                                                                                                                                                                                              |
| [kubernetesClustersCreateOrUpdateSample.ts][kubernetesclusterscreateorupdatesample]                                       | create a new Kubernetes cluster or update the properties of the existing one. x-ms-original-file: 2026-07-01/KubernetesClusters_Create.json                                                                                                                                                                                                                   |
| [kubernetesClustersDeleteSample.ts][kubernetesclustersdeletesample]                                                       | delete the provided Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusters_Delete.json                                                                                                                                                                                                                                                         |
| [kubernetesClustersGetSample.ts][kubernetesclustersgetsample]                                                             | get properties of the provided the Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusters_Get.json                                                                                                                                                                                                                                             |
| [kubernetesClustersListByResourceGroupSample.ts][kubernetesclusterslistbyresourcegroupsample]                             | get a list of Kubernetes clusters in the provided resource group. x-ms-original-file: 2026-07-01/KubernetesClusters_ListByResourceGroup.json                                                                                                                                                                                                                  |
| [kubernetesClustersListBySubscriptionSample.ts][kubernetesclusterslistbysubscriptionsample]                               | get a list of Kubernetes clusters in the provided subscription. x-ms-original-file: 2026-07-01/KubernetesClusters_ListBySubscription.json                                                                                                                                                                                                                     |
| [kubernetesClustersRestartNodeSample.ts][kubernetesclustersrestartnodesample]                                             | restart a targeted node of a Kubernetes cluster. x-ms-original-file: 2026-07-01/KubernetesClusters_RestartNode.json                                                                                                                                                                                                                                           |
| [kubernetesClustersUpdateSample.ts][kubernetesclustersupdatesample]                                                       | patch the properties of the provided Kubernetes cluster, or update the tags associated with the Kubernetes cluster. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/KubernetesClusters_Patch.json                                                                                                                        |
| [kubernetesVersionsCreateOrUpdateSample.ts][kubernetesversionscreateorupdatesample]                                       | create the Kubernetes version resource or update its tags. This resource is system managed and should only be created with the name "default". x-ms-original-file: 2026-07-01/KubernetesVersions_Create.json                                                                                                                                                  |
| [kubernetesVersionsDeleteSample.ts][kubernetesversionsdeletesample]                                                       | delete the specified Kubernetes version resource. x-ms-original-file: 2026-07-01/KubernetesVersions_Delete.json                                                                                                                                                                                                                                               |
| [kubernetesVersionsGetSample.ts][kubernetesversionsgetsample]                                                             | retrieve the Kubernetes version resource that describes the available Kubernetes versions for deployment. x-ms-original-file: 2026-07-01/KubernetesVersions_Get.json                                                                                                                                                                                          |
| [kubernetesVersionsListByResourceGroupSample.ts][kubernetesversionslistbyresourcegroupsample]                             | get a list of Kubernetes version resources in the provided resource group. x-ms-original-file: 2026-07-01/KubernetesVersions_ListByResourceGroup.json                                                                                                                                                                                                         |
| [kubernetesVersionsListBySubscriptionSample.ts][kubernetesversionslistbysubscriptionsample]                               | get a list of Kubernetes version resources in the provided subscription. x-ms-original-file: 2026-07-01/KubernetesVersions_ListBySubscription.json                                                                                                                                                                                                            |
| [kubernetesVersionsUpdateSample.ts][kubernetesversionsupdatesample]                                                       | update tags associated with the Kubernetes version resource. No other properties are supported for update. x-ms-original-file: 2026-07-01/KubernetesVersions_UpdateTags.json                                                                                                                                                                                  |
| [l2NetworksCreateOrUpdateSample.ts][l2networkscreateorupdatesample]                                                       | create a new layer 2 (L2) network or update the properties of the existing network. x-ms-original-file: 2026-07-01/L2Networks_Create.json                                                                                                                                                                                                                     |
| [l2NetworksDeleteSample.ts][l2networksdeletesample]                                                                       | delete the provided layer 2 (L2) network. x-ms-original-file: 2026-07-01/L2Networks_Delete.json                                                                                                                                                                                                                                                               |
| [l2NetworksGetSample.ts][l2networksgetsample]                                                                             | get properties of the provided layer 2 (L2) network. x-ms-original-file: 2026-07-01/L2Networks_Get.json                                                                                                                                                                                                                                                       |
| [l2NetworksListByResourceGroupSample.ts][l2networkslistbyresourcegroupsample]                                             | get a list of layer 2 (L2) networks in the provided resource group. x-ms-original-file: 2026-07-01/L2Networks_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [l2NetworksListBySubscriptionSample.ts][l2networkslistbysubscriptionsample]                                               | get a list of layer 2 (L2) networks in the provided subscription. x-ms-original-file: 2026-07-01/L2Networks_ListBySubscription.json                                                                                                                                                                                                                           |
| [l2NetworksUpdateSample.ts][l2networksupdatesample]                                                                       | update tags associated with the provided layer 2 (L2) network. x-ms-original-file: 2026-07-01/L2Networks_Patch.json                                                                                                                                                                                                                                           |
| [l3NetworksCreateOrUpdateSample.ts][l3networkscreateorupdatesample]                                                       | create a new layer 3 (L3) network or update the properties of the existing network. x-ms-original-file: 2026-07-01/L3Networks_Create.json                                                                                                                                                                                                                     |
| [l3NetworksDeleteSample.ts][l3networksdeletesample]                                                                       | delete the provided layer 3 (L3) network. x-ms-original-file: 2026-07-01/L3Networks_Delete.json                                                                                                                                                                                                                                                               |
| [l3NetworksGetSample.ts][l3networksgetsample]                                                                             | get properties of the provided layer 3 (L3) network. x-ms-original-file: 2026-07-01/L3Networks_Get.json                                                                                                                                                                                                                                                       |
| [l3NetworksListByResourceGroupSample.ts][l3networkslistbyresourcegroupsample]                                             | get a list of layer 3 (L3) networks in the provided resource group. x-ms-original-file: 2026-07-01/L3Networks_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [l3NetworksListBySubscriptionSample.ts][l3networkslistbysubscriptionsample]                                               | get a list of layer 3 (L3) networks in the provided subscription. x-ms-original-file: 2026-07-01/L3Networks_ListBySubscription.json                                                                                                                                                                                                                           |
| [l3NetworksUpdateSample.ts][l3networksupdatesample]                                                                       | update tags associated with the provided layer 3 (L3) network. x-ms-original-file: 2026-07-01/L3Networks_Patch.json                                                                                                                                                                                                                                           |
| [metricsConfigurationsCreateOrUpdateSample.ts][metricsconfigurationscreateorupdatesample]                                 | create new or update the existing metrics configuration of the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Create.json                                                                                                                                                                                                      |
| [metricsConfigurationsDeleteSample.ts][metricsconfigurationsdeletesample]                                                 | delete the metrics configuration of the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Delete.json                                                                                                                                                                                                                             |
| [metricsConfigurationsGetSample.ts][metricsconfigurationsgetsample]                                                       | get metrics configuration of the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Get.json                                                                                                                                                                                                                                       |
| [metricsConfigurationsListByClusterSample.ts][metricsconfigurationslistbyclustersample]                                   | get a list of metrics configurations for the provided cluster. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_ListByCluster.json                                                                                                                                                                                                                 |
| [metricsConfigurationsUpdateSample.ts][metricsconfigurationsupdatesample]                                                 | patch properties of metrics configuration for the provided cluster, or update the tags associated with it. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/ClusterMetricsConfigurations_Patch.json                                                                                                                       |
| [operationsListSample.ts][operationslistsample]                                                                           | list the operations for the provider x-ms-original-file: 2026-07-01/Operations_List.json                                                                                                                                                                                                                                                                      |
| [rackSkusGetSample.ts][rackskusgetsample]                                                                                 | get the properties of the provided rack SKU. x-ms-original-file: 2026-07-01/RackSkus_Get.json                                                                                                                                                                                                                                                                 |
| [rackSkusListBySubscriptionSample.ts][rackskuslistbysubscriptionsample]                                                   | get a list of rack SKUs in the provided subscription. x-ms-original-file: 2026-07-01/RackSkus_ListBySubscription.json                                                                                                                                                                                                                                         |
| [racksCreateOrUpdateSample.ts][rackscreateorupdatesample]                                                                 | create a new rack or update properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/Racks_Create.json                                                                                                                                    |
| [racksDeleteSample.ts][racksdeletesample]                                                                                 | delete the provided rack. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/Racks_Delete.json                                                                                                                                                                      |
| [racksGetSample.ts][racksgetsample]                                                                                       | get properties of the provided rack. x-ms-original-file: 2026-07-01/Racks_Get.json                                                                                                                                                                                                                                                                            |
| [racksListByResourceGroupSample.ts][rackslistbyresourcegroupsample]                                                       | get a list of racks in the provided resource group. x-ms-original-file: 2026-07-01/Racks_ListByResourceGroup.json                                                                                                                                                                                                                                             |
| [racksListBySubscriptionSample.ts][rackslistbysubscriptionsample]                                                         | get a list of racks in the provided subscription. x-ms-original-file: 2026-07-01/Racks_ListBySubscription.json                                                                                                                                                                                                                                                |
| [racksUpdateSample.ts][racksupdatesample]                                                                                 | patch properties of the provided rack, or update the tags associated with the rack. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/Racks_Patch.json                                                                                                                                                                     |
| [storageAppliancesCreateOrUpdateSample.ts][storageappliancescreateorupdatesample]                                         | create a new storage appliance or update the properties of the existing one. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/StorageAppliances_Create.json                                                                                                       |
| [storageAppliancesDeleteSample.ts][storageappliancesdeletesample]                                                         | delete the provided storage appliance. All customer initiated requests will be rejected as the life cycle of this resource is managed by the system. x-ms-original-file: 2026-07-01/StorageAppliances_Delete.json                                                                                                                                             |
| [storageAppliancesDisableRemoteVendorManagementSample.ts][storageappliancesdisableremotevendormanagementsample]           | disable remote vendor management of the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_DisableRemoteVendorManagement.json                                                                                                                                                                                                       |
| [storageAppliancesEnableRemoteVendorManagementSample.ts][storageappliancesenableremotevendormanagementsample]             | enable remote vendor management of the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_EnableRemoteVendorManagement.json                                                                                                                                                                                                         |
| [storageAppliancesGetSample.ts][storageappliancesgetsample]                                                               | get properties of the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_Get.json                                                                                                                                                                                                                                                   |
| [storageAppliancesListByResourceGroupSample.ts][storageapplianceslistbyresourcegroupsample]                               | get a list of storage appliances in the provided resource group. x-ms-original-file: 2026-07-01/StorageAppliances_ListByResourceGroup.json                                                                                                                                                                                                                    |
| [storageAppliancesListBySubscriptionSample.ts][storageapplianceslistbysubscriptionsample]                                 | get a list of storage appliances in the provided subscription. x-ms-original-file: 2026-07-01/StorageAppliances_ListBySubscription.json                                                                                                                                                                                                                       |
| [storageAppliancesRunReadCommandsSample.ts][storageappliancesrunreadcommandssample]                                       | run one or more read-only commands on the provided storage appliance. x-ms-original-file: 2026-07-01/StorageAppliances_RunReadCommands.json                                                                                                                                                                                                                   |
| [storageAppliancesUpdateSample.ts][storageappliancesupdatesample]                                                         | update properties of the provided storage appliance, or update tags associated with the storage appliance Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/StorageAppliances_Patch.json                                                                                                                                   |
| [trunkedNetworksCreateOrUpdateSample.ts][trunkednetworkscreateorupdatesample]                                             | create a new trunked network or update the properties of the existing trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Create.json                                                                                                                                                                                                             |
| [trunkedNetworksDeleteSample.ts][trunkednetworksdeletesample]                                                             | delete the provided trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Delete.json                                                                                                                                                                                                                                                               |
| [trunkedNetworksGetSample.ts][trunkednetworksgetsample]                                                                   | get properties of the provided trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Get.json                                                                                                                                                                                                                                                       |
| [trunkedNetworksListByResourceGroupSample.ts][trunkednetworkslistbyresourcegroupsample]                                   | get a list of trunked networks in the provided resource group. x-ms-original-file: 2026-07-01/TrunkedNetworks_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [trunkedNetworksListBySubscriptionSample.ts][trunkednetworkslistbysubscriptionsample]                                     | get a list of trunked networks in the provided subscription. x-ms-original-file: 2026-07-01/TrunkedNetworks_ListBySubscription.json                                                                                                                                                                                                                           |
| [trunkedNetworksUpdateSample.ts][trunkednetworksupdatesample]                                                             | update tags associated with the provided trunked network. x-ms-original-file: 2026-07-01/TrunkedNetworks_Patch.json                                                                                                                                                                                                                                           |
| [virtualMachinesAssignRelaySample.ts][virtualmachinesassignrelaysample]                                                   | assigns a relay to the specified Microsoft.HybridCompute machine associated with the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_AssignRelay.json                                                                                                                                                                                |
| [virtualMachinesCreateOrUpdateSample.ts][virtualmachinescreateorupdatesample]                                             | create a new virtual machine or update the properties of the existing virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Create.json                                                                                                                                                                                                             |
| [virtualMachinesDeleteSample.ts][virtualmachinesdeletesample]                                                             | delete the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Delete.json                                                                                                                                                                                                                                                               |
| [virtualMachinesGetSample.ts][virtualmachinesgetsample]                                                                   | get properties of the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Get.json                                                                                                                                                                                                                                                       |
| [virtualMachinesListByResourceGroupSample.ts][virtualmachineslistbyresourcegroupsample]                                   | get a list of virtual machines in the provided resource group. x-ms-original-file: 2026-07-01/VirtualMachines_ListByResourceGroup.json                                                                                                                                                                                                                        |
| [virtualMachinesListBySubscriptionSample.ts][virtualmachineslistbysubscriptionsample]                                     | get a list of virtual machines in the provided subscription. x-ms-original-file: 2026-07-01/VirtualMachines_ListBySubscription.json                                                                                                                                                                                                                           |
| [virtualMachinesPowerOffSample.ts][virtualmachinespoweroffsample]                                                         | power off the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_PowerOff.json                                                                                                                                                                                                                                                          |
| [virtualMachinesReimageSample.ts][virtualmachinesreimagesample]                                                           | reimage the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Reimage.json                                                                                                                                                                                                                                                             |
| [virtualMachinesRestartSample.ts][virtualmachinesrestartsample]                                                           | restart the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Restart.json                                                                                                                                                                                                                                                             |
| [virtualMachinesStartSample.ts][virtualmachinesstartsample]                                                               | start the provided virtual machine. x-ms-original-file: 2026-07-01/VirtualMachines_Start.json                                                                                                                                                                                                                                                                 |
| [virtualMachinesUpdateSample.ts][virtualmachinesupdatesample]                                                             | patch the properties of the provided virtual machine, or update the tags associated with the virtual machine. Properties and tag updates can be done independently. x-ms-original-file: 2026-07-01/VirtualMachines_Patch.json                                                                                                                                 |
| [volumesCreateOrUpdateSample.ts][volumescreateorupdatesample]                                                             | create a new volume or update the properties of the existing one. x-ms-original-file: 2026-07-01/Volumes_Create.json                                                                                                                                                                                                                                          |
| [volumesDeleteSample.ts][volumesdeletesample]                                                                             | delete the provided volume. x-ms-original-file: 2026-07-01/Volumes_Delete.json                                                                                                                                                                                                                                                                                |
| [volumesGetSample.ts][volumesgetsample]                                                                                   | get properties of the provided volume. x-ms-original-file: 2026-07-01/Volumes_Get.json                                                                                                                                                                                                                                                                        |
| [volumesListByResourceGroupSample.ts][volumeslistbyresourcegroupsample]                                                   | get a list of volumes in the provided resource group. x-ms-original-file: 2026-07-01/Volumes_ListByResourceGroup.json                                                                                                                                                                                                                                         |
| [volumesListBySubscriptionSample.ts][volumeslistbysubscriptionsample]                                                     | get a list of volumes in the provided subscription. x-ms-original-file: 2026-07-01/Volumes_ListBySubscription.json                                                                                                                                                                                                                                            |
| [volumesUpdateSample.ts][volumesupdatesample]                                                                             | update tags associated with the provided volume. x-ms-original-file: 2026-07-01/Volumes_Patch.json                                                                                                                                                                                                                                                            |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/accessBridgesCreateOrUpdateSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/accessBridgesCreateOrUpdateSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[accessbridgescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/accessBridgesCreateOrUpdateSample.ts
[accessbridgesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/accessBridgesDeleteSample.ts
[accessbridgesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/accessBridgesGetSample.ts
[accessbridgeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/accessBridgesListByResourceGroupSample.ts
[accessbridgeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/accessBridgesListBySubscriptionSample.ts
[accessbridgesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/accessBridgesUpdateSample.ts
[agentpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/agentPoolsCreateOrUpdateSample.ts
[agentpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/agentPoolsDeleteSample.ts
[agentpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/agentPoolsGetSample.ts
[agentpoolslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/agentPoolsListByKubernetesClusterSample.ts
[agentpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/agentPoolsUpdateSample.ts
[baremetalmachinekeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachineKeySetsCreateOrUpdateSample.ts
[baremetalmachinekeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachineKeySetsDeleteSample.ts
[baremetalmachinekeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachineKeySetsGetSample.ts
[baremetalmachinekeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachineKeySetsListByClusterSample.ts
[baremetalmachinekeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachineKeySetsUpdateSample.ts
[baremetalmachinescordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesCordonSample.ts
[baremetalmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesCreateOrUpdateSample.ts
[baremetalmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesDeleteSample.ts
[baremetalmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesGetSample.ts
[baremetalmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesListByResourceGroupSample.ts
[baremetalmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesListBySubscriptionSample.ts
[baremetalmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesPowerOffSample.ts
[baremetalmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesReimageSample.ts
[baremetalmachinesreplacesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesReplaceSample.ts
[baremetalmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesRestartSample.ts
[baremetalmachinesruncommandsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesRunCommandSample.ts
[baremetalmachinesrundataextractsrestrictedsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesRunDataExtractsRestrictedSample.ts
[baremetalmachinesrundataextractssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesRunDataExtractsSample.ts
[baremetalmachinesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesRunReadCommandsSample.ts
[baremetalmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesStartSample.ts
[baremetalmachinesuncordonsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesUncordonSample.ts
[baremetalmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bareMetalMachinesUpdateSample.ts
[bmckeysetscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bmcKeySetsCreateOrUpdateSample.ts
[bmckeysetsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bmcKeySetsDeleteSample.ts
[bmckeysetsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bmcKeySetsGetSample.ts
[bmckeysetslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bmcKeySetsListByClusterSample.ts
[bmckeysetsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/bmcKeySetsUpdateSample.ts
[cloudservicesnetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/cloudServicesNetworksCreateOrUpdateSample.ts
[cloudservicesnetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/cloudServicesNetworksDeleteSample.ts
[cloudservicesnetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/cloudServicesNetworksGetSample.ts
[cloudservicesnetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/cloudServicesNetworksListByResourceGroupSample.ts
[cloudservicesnetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/cloudServicesNetworksListBySubscriptionSample.ts
[cloudservicesnetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/cloudServicesNetworksUpdateSample.ts
[clustermanagerscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersCreateOrUpdateSample.ts
[clustermanagersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersDeleteSample.ts
[clustermanagersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersGetSample.ts
[clustermanagerslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersListByResourceGroupSample.ts
[clustermanagerslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersListBySubscriptionSample.ts
[clustermanagersupdaterelayprivateendpointconnectionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersUpdateRelayPrivateEndpointConnectionSample.ts
[clustermanagersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clusterManagersUpdateSample.ts
[clusterscontinueupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersContinueUpdateVersionSample.ts
[clusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersCreateOrUpdateSample.ts
[clustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersDeleteSample.ts
[clustersdeploysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersDeploySample.ts
[clustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersGetSample.ts
[clustersinspectsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersInspectSample.ts
[clusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersListByResourceGroupSample.ts
[clusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersListBySubscriptionSample.ts
[clustersrotatecredentialsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersRotateCredentialSample.ts
[clustersscanruntimesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersScanRuntimeSample.ts
[clustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersUpdateSample.ts
[clustersupdateversionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/clustersUpdateVersionSample.ts
[consolescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/consolesCreateOrUpdateSample.ts
[consolesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/consolesDeleteSample.ts
[consolesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/consolesGetSample.ts
[consoleslistbyvirtualmachinesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/consolesListByVirtualMachineSample.ts
[consolesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/consolesUpdateSample.ts
[kubernetesclusterfeaturescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClusterFeaturesCreateOrUpdateSample.ts
[kubernetesclusterfeaturesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClusterFeaturesDeleteSample.ts
[kubernetesclusterfeaturesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClusterFeaturesGetSample.ts
[kubernetesclusterfeatureslistbykubernetesclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClusterFeaturesListByKubernetesClusterSample.ts
[kubernetesclusterfeaturesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClusterFeaturesUpdateSample.ts
[kubernetesclusterscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersCreateOrUpdateSample.ts
[kubernetesclustersdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersDeleteSample.ts
[kubernetesclustersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersGetSample.ts
[kubernetesclusterslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersListByResourceGroupSample.ts
[kubernetesclusterslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersListBySubscriptionSample.ts
[kubernetesclustersrestartnodesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersRestartNodeSample.ts
[kubernetesclustersupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesClustersUpdateSample.ts
[kubernetesversionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesVersionsCreateOrUpdateSample.ts
[kubernetesversionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesVersionsDeleteSample.ts
[kubernetesversionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesVersionsGetSample.ts
[kubernetesversionslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesVersionsListByResourceGroupSample.ts
[kubernetesversionslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesVersionsListBySubscriptionSample.ts
[kubernetesversionsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/kubernetesVersionsUpdateSample.ts
[l2networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l2NetworksCreateOrUpdateSample.ts
[l2networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l2NetworksDeleteSample.ts
[l2networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l2NetworksGetSample.ts
[l2networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l2NetworksListByResourceGroupSample.ts
[l2networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l2NetworksListBySubscriptionSample.ts
[l2networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l2NetworksUpdateSample.ts
[l3networkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l3NetworksCreateOrUpdateSample.ts
[l3networksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l3NetworksDeleteSample.ts
[l3networksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l3NetworksGetSample.ts
[l3networkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l3NetworksListByResourceGroupSample.ts
[l3networkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l3NetworksListBySubscriptionSample.ts
[l3networksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/l3NetworksUpdateSample.ts
[metricsconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/metricsConfigurationsCreateOrUpdateSample.ts
[metricsconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/metricsConfigurationsDeleteSample.ts
[metricsconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/metricsConfigurationsGetSample.ts
[metricsconfigurationslistbyclustersample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/metricsConfigurationsListByClusterSample.ts
[metricsconfigurationsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/metricsConfigurationsUpdateSample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/operationsListSample.ts
[rackskusgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/rackSkusGetSample.ts
[rackskuslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/rackSkusListBySubscriptionSample.ts
[rackscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/racksCreateOrUpdateSample.ts
[racksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/racksDeleteSample.ts
[racksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/racksGetSample.ts
[rackslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/racksListByResourceGroupSample.ts
[rackslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/racksListBySubscriptionSample.ts
[racksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/racksUpdateSample.ts
[storageappliancescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesCreateOrUpdateSample.ts
[storageappliancesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesDeleteSample.ts
[storageappliancesdisableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesDisableRemoteVendorManagementSample.ts
[storageappliancesenableremotevendormanagementsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesEnableRemoteVendorManagementSample.ts
[storageappliancesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesGetSample.ts
[storageapplianceslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesListByResourceGroupSample.ts
[storageapplianceslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesListBySubscriptionSample.ts
[storageappliancesrunreadcommandssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesRunReadCommandsSample.ts
[storageappliancesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/storageAppliancesUpdateSample.ts
[trunkednetworkscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/trunkedNetworksCreateOrUpdateSample.ts
[trunkednetworksdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/trunkedNetworksDeleteSample.ts
[trunkednetworksgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/trunkedNetworksGetSample.ts
[trunkednetworkslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/trunkedNetworksListByResourceGroupSample.ts
[trunkednetworkslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/trunkedNetworksListBySubscriptionSample.ts
[trunkednetworksupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/trunkedNetworksUpdateSample.ts
[virtualmachinesassignrelaysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesAssignRelaySample.ts
[virtualmachinescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesCreateOrUpdateSample.ts
[virtualmachinesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesDeleteSample.ts
[virtualmachinesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesGetSample.ts
[virtualmachineslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesListByResourceGroupSample.ts
[virtualmachineslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesListBySubscriptionSample.ts
[virtualmachinespoweroffsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesPowerOffSample.ts
[virtualmachinesreimagesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesReimageSample.ts
[virtualmachinesrestartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesRestartSample.ts
[virtualmachinesstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesStartSample.ts
[virtualmachinesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/virtualMachinesUpdateSample.ts
[volumescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/volumesCreateOrUpdateSample.ts
[volumesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/volumesDeleteSample.ts
[volumesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/volumesGetSample.ts
[volumeslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/volumesListByResourceGroupSample.ts
[volumeslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/volumesListBySubscriptionSample.ts
[volumesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/networkcloud/arm-networkcloud/samples/v2/typescript/src/volumesUpdateSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-networkcloud
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/networkcloud/arm-networkcloud/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
